@@ -1,2 +1,3 @@
 obj-y := main.o
 obj-y += calibrate.o
+obj-y += version.o
